Support eventstats command with Calcite
Signed-off-by: Lantao Jin <ltjin@amazon.com>